# kokkos-tools

./: kokkos.presets.json
.github/workflows/: build-with-kokkos.yml
profiling/perfetto-connector/perfetto/: perfetto.cc
profiling/roctx-connector/: CMakeLists.txt  kp_roctx_connector.cpp
profiling/space-time-stack/: kp_space_time_stack.cpp  kp_space_time_stack.hpp
tests/space-time-stack/: CMakeLists.txt  SpaceTimeStackTestSetup.hpp  test_State.cpp  test_demangling.cpp
